--- a/index.html
+++ b/index.html
@@ -1,1 +1,81 @@
-<!-- nothing here -->
+<!DOCTYPE html>
+<html lang="en">
+	<head>
+		<meta charset="UTF-8" />
+		<title>Recepten</title>
+
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	</head>
+	<body>
+		<ul>
+			<li><a href="index.html">Pasta gremolata met ricotta</a></li>
+			<li>
+				<a href="pasta-met-kerstomaatjes.html"
+					>Supersnelle pasta met kerstomaatjes</a
+				>
+			</li>
+			<li><a href="chorizo-met-ei.html">Chorizo met ei</a></li>
+		<h1>Pasta gremolata met ricotta</h1>
+		<img src="Images /pasta-gremolata-met-ricotta .jpeg"/>
+		<h2>Ingrediënten</h2>
+		<ul>
+			<li>500 g farfalle</li>
+			<li>1 el pijnboompitten</li>
+			<li>1 teentje knoflook</li>
+			<li>1 citroenschil</li>
+			<li>250 g ricotta</li>
+				<li>handje bladpeterselie</li>
+		</ul>
+		<h2>Bereiding</h2>
+		<ol>
+			<li>Kook de pasta beetgaar in een ruime hoeveelheid gezouten water. </li>
+			<li>Snipper de peterselie en de knoflook. Vermeng de geraspte citroenschil.</li>
+			<li>Schep de ricotta door de warme pasta en verdeel de borden. Bestrooi met de gremolata en werk af met de pijnboompitten.</li>
+		</ol>
+
+
+<h1>Chorizo met ei</h1>
+		<img src="Images /chorizo-met-ei .jpeg"/>
+		<h2>Ingrediënten</h2>
+		<ul>
+			<li>250 g Chorizoworst</li>
+			<li>1 rode paprika</li>
+			<li>1 gele paprika</li>
+			<li>1 groene paprika</li>
+			<li>400 g tamatenblokjes (uit blik)</li>
+			<li>4 eieren</li>
+			<li>3 lente-uitjes</li>
+			<li>peper</li>
+			<li>zout</li>
+		</ul>
+		<h2>Bereiding</h2>
+		<ol>
+			<li>Snij de chorizo in blokjes, de paprika's in reepjes en de lente-uitjes in ringen.</li>
+			<li>Meng de paprika met de tomatenblokjes, de lente-ui en de chorizo. Breng alles op smaak met flink wat peper en eventueel een klein beetje zout.</li>
+			<li>Verdeel het mengsel over 4 individuele schaaltjes. Zet ze 3 à 4 minuten in de microgolfoven, op 600 Watt.</li>
+			<li>Breek in elk schaaltje 1 ei, prik de dooier door en zet de schaaltjes opnieuw 1 à 2 minuten in de microgolfoven, tot het eiwit gestold is.</li>
+		</ol>
+
+		<h1>Supersnelle pasta met kerstomaatjes</h1>
+		<img src="Images /pasta-met-kerstomaatjes.jpeg"/>
+		<h2>Ingrediënten</h2>
+		<ul>
+			<li>300 g kerstomaatjes</li>
+			<li>150 g mozzarella</li>
+			<li>400 g tagliatelle (groene)</li>
+			<li>olijfolie</li>
+			<li>basilicum</li>
+			<li>fleur de sel</li>
+			<li>peper</li>
+		</ul>
+		<h2>Bereiding</h2>
+		<ol>
+			<li>Spoel de kerstomaatjes en halveer ze.</li>
+			<li>Kook de pasta volgens de aanwijzingen op de verpakking. Giet af.</li>
+			<li>Pluk de mozzarella in stukjes, verdeel ze met de tomaatjes op de pasta.</li>
+			<li>Werk af met basilicumblaadjes, olijfolie, versgemalen peper en een beetje fleur de sel.</li>
+		</ol>
+		
+	</body>
+</html>
+		
